# simple-raft

./: Cargo.toml  justfile
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
